test/files/neg/t5429c.check
t5429c.scala:20: error: `override` modifier required to override concrete member:
val value: Int (defined in class A)
  object value      // fail
         ^
t5429c.scala:21: error: `override` modifier required to override concrete member:
lazy val lazyvalue: Int (defined in class A)
  object lazyvalue  // fail
         ^
t5429c.scala:22: error: `override` modifier required to override concrete member:
def nullary: Int (defined in class A)
  object nullary    // fail
         ^
t5429c.scala:23: error: `override` modifier required to override concrete member:
def emptyArg(): Int (defined in class A)
  object emptyArg   // fail
         ^
t5429c.scala:27: error: `override` modifier required to override concrete member:
val value: Any (defined in class A0)
  object value      // fail
         ^
t5429c.scala:28: error: `override` modifier required to override concrete member:
lazy val lazyvalue: Any (defined in class A0)
  object lazyvalue  // fail
         ^
t5429c.scala:29: error: `override` modifier required to override concrete member:
def nullary: Any (defined in class A0)
  object nullary    // fail
         ^
t5429c.scala:30: error: `override` modifier required to override concrete member:
def emptyArg(): Any (defined in class A0)
  object emptyArg   // fail
         ^
t5429c.scala:35: error: value must be non-lazy when overriding concrete non-lazy value:
val value: Int (defined in class A)
  override object value     // fail
                  ^
t5429c.scala:36: error: incompatible type in overriding
lazy val lazyvalue: Int (defined in class A);
 found   : C.this.lazyvalue.type
 required: Int
  override object lazyvalue // fail
                  ^
t5429c.scala:37: error: incompatible type in overriding
def nullary: Int (defined in class A);
 found   : C.this.nullary.type
 required: Int
  override object nullary   // fail
                  ^
t5429c.scala:38: error: incompatible type in overriding
def emptyArg(): Int (defined in class A);
 found   : C.this.emptyArg.type
 required: (): Int
  override object emptyArg  // fail
                  ^
t5429c.scala:39: error: object oneArg overrides nothing.
Note: the super classes of class C contain the following, non final members named oneArg:
def oneArg(x: String): Int
  override object oneArg    // fail
                  ^
t5429c.scala:42: error: value must be non-lazy when overriding concrete non-lazy value:
val value: Any (defined in class A0)
  override object value     // fail
                  ^
t5429c.scala:46: error: object oneArg overrides nothing.
Note: the super classes of class C0 contain the following, non final members named oneArg:
def oneArg(x: String): Any
  override object oneArg    // fail
                  ^
t5429c.scala:50: error: `override` modifier required to override concrete member:
val value: Int (defined in class A)
  val value = 0       // fail
      ^
t5429c.scala:51: error: `override` modifier required to override concrete member:
lazy val lazyvalue: Int (defined in class A)
  val lazyvalue = 0   // fail
      ^
t5429c.scala:52: error: `override` modifier required to override concrete member:
def nullary: Int (defined in class A)
  val nullary = 5     // fail
      ^
t5429c.scala:53: error: `override` modifier required to override concrete member:
def emptyArg(): Int (defined in class A)
  val emptyArg = 10   // fail
      ^
t5429c.scala:58: error: value must be lazy when overriding concrete lazy value:
lazy val lazyvalue: Any (defined in class A0)
  override val lazyvalue = 0  // fail (non-lazy)
               ^
t5429c.scala:61: error: value oneArg overrides nothing.
Note: the super classes of class D0 contain the following, non final members named oneArg:
def oneArg(x: String): Any
  override val oneArg = 15    // fail
               ^
t5429c.scala:65: error: `override` modifier required to override concrete member:
val value: Int (defined in class A)
  def value = 0       // fail
      ^
t5429c.scala:66: error: `override` modifier required to override concrete member:
lazy val lazyvalue: Int (defined in class A)
  def lazyvalue = 2   // fail
      ^
t5429c.scala:67: error: `override` modifier required to override concrete member:
def nullary: Int (defined in class A)
  def nullary = 5     // fail
      ^
t5429c.scala:71: error: stable, immutable value required to override:
val value: Any (defined in class A0)
  override def value = 0      // fail
               ^
t5429c.scala:72: error: stable, immutable value required to override:
lazy val lazyvalue: Any (defined in class A0)
  override def lazyvalue = 2  // fail
               ^
t5429c.scala:74: error: method oneArg overrides nothing.
Note: the super classes of class E0 contain the following, non final members named oneArg:
def oneArg(x: String): Any
  override def oneArg = 15    // fail
               ^
t5429c.scala:78: error: `override` modifier required to override concrete member:
val value: Int (defined in class A)
  lazy val value = 0       // fail
           ^
t5429c.scala:79: error: `override` modifier required to override concrete member:
lazy val lazyvalue: Int (defined in class A)
  lazy val lazyvalue = 2   // fail
           ^
t5429c.scala:80: error: `override` modifier required to override concrete member:
def nullary: Int (defined in class A)
  lazy val nullary = 5     // fail
           ^
t5429c.scala:84: error: value must be non-lazy when overriding concrete non-lazy value:
val value: Any (defined in class A0)
  override lazy val value = 0      // fail (strict over lazy)
                    ^
t5429c.scala:87: error: lazy value oneArg overrides nothing.
Note: the super classes of class F0 contain the following, non final members named oneArg:
def oneArg(x: String): Any
  override lazy val oneArg = 15    // fail
                    ^
32 errors
